# control

./: CMakeLists.txt  Doxyfile.in
control/: CMakeLists.txt  abstraction_environment.hpp  applicative.hpp  apply_to.hpp  call_with.hpp  coapplicative.hpp  comonad.hpp  config.hpp.in  control.hpp  functor.hpp  import.hpp  monad.hpp  pure.hpp
control_testing/: CMakeLists.txt  abstraction_environment_test.cpp  applicative_test.cpp  apply_to_test.cpp  coapplicative_test.cpp  comonad_test.cpp  functor_test.cpp  monad_test.cpp  pure_test.cpp  test_macros.hpp  test_tools.hpp
